# ml_project_template

./: .gitignore  README.md  pyproject.toml  run.py
adhoc/: eda.py
configs/: default.json
notebooks/: eda.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
src/data_processor/: process.py  schema.py
src/models/base/: model.py
src/models/catboost/: model.py  preprocess.py
src/models/lightgbm/: model.py  preprocess.py
src/models/xgboost/: model.py  preprocess.py
src/optimizer/: base.py  catboost.py  lightgbm.py  xgboost.py
src/utils/: generate_tree_info.py  logger.py
